# Messier87

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  blackhole.cpp  blackhole.h  bloom.cpp  bloom.h  build.bat  cgl_shader.cpp  cgl_shader.h  common.cpp  common.h  draw_texture.cpp  draw_texture.h  input.cpp  input.h  main.cpp  sphere_tree.cpp  sphere_tree.h
gl/: glew.h  glut.h
shader/: blackhole_adisc.glslf  bloom.glslf  draw_tex.glslf  gaussian_pass_h.glslf  gaussian_pass_v.glslf  gen_mipmap.glslf
